Refactor discount application logic in TescoSolution and update tests